first version of project

--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,27 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-image: url("../images/cover-image-light.png");
+  --bg-color: #FFF1F7;
+  --accent-color: #FF8DCB;
+  --supporting-color: #353430;
+  --main-title-color:  #FFC2E6;
+  --title-shadow-color: #FF8DCB;
+  --paragraph-text-color: #353430;
+  --hovered-button-border: rgba(50, 49, 45, 0.4);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+   --bg-image: url("../images/cover-image-light.png");
+  --bg-color: #FFF1F7;
+  --accent-color: #FF8DCB;
+  --supporting-color: #353430;
+  --main-title-color:  #FFC2E6;
+  --title-shadow-color: #FF8DCB;
+  --paragraph-text-color: #353430;
+  --hovered-button-border: rgba(50, 49, 45, 0.4);
+  }
+}
+
+.theme-light .header__rec-indicator {
+  display: none;
 }
