--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,14 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root {
+  --bg-image: url("../images/cover-image-dark.png");
+  --bg-color: #000028;
+  --accent-color: #FF0070;
+  --supporting-color: #F1B2CE;
+  --main-title-color: #DB00FF;
+  --title-shadow-color: #FF0070;
+  --main-title-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  --paragraph-text-color: #000028;
+  --hovered-button-border: rgba(255, 0, 112, 0.4);
+  --gap-length: 20px;
+  --header-gallery-mb: 60px;
+  --section-mb: 80px;
+}
