--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,318 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  background-image: var(--bg-image);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-color: var(--bg-color);
+}
+
+.header {
+  position: relative;
+  height: 100vh;
+  min-height: 768px;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  margin-bottom: var(--header-gallery-mb);
+  margin-right: var(--gap-length);
+}
+
+.header__theme-menu {
+  justify-self: center;
+  align-self: start;
+  grid-column: 2/3;
+  padding-top: 21.5px
+}
+
+.header__theme-menu-list {
+  display: flex;
+  gap: 10px;
+}
+
+.header__theme-menu-button {
+  appearance: none;
+  border: none;
+  text-transform: lowercase;
+  padding: 0 13px; 
+  color: var(--accent-color);
+  background-color: transparent;
+  font-weight: normal;
+  text-align: center;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid var(--hovered-button-border);
+  cursor: pointer;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid currentColor;
+  outline: none;
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--accent-color);
+  pointer-events: none;
+}
+
+.header__rec-indicator {
+  position: absolute;
+  top: var(--gap-length);
+  right: 29px;
+  font-weight: normal;
+  line-height: 25px;
+  letter-spacing: 0;
+  color: var(--accent-color);
+}
+
+.header__rec-indicator::after {
+  content: "";
+  display: inline-block;
+  width: 9px;    
+  height: 9px;
+  margin-left: 6px; 
+  background: var(--accent-color);
+  border-radius: 50%;
+  box-shadow: 0px 0px 4px 2px var(--accent-color);
+}
+
+.decorated-zone::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  top: var(--gap-length);
+  right: var(--gap-length);
+  border-width: 1px 1px 0px 0px;
+  border-style: solid;
+  border-color: var(--accent-color);
+}
+
+.decorated-zone::before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  bottom: var(--gap-length);
+  left: var(--gap-length);
+  border-width: 0px 0px 1px 1px;
+  border-style: solid;
+  border-color: var(--accent-color);
+}
+
+.header__title {
+  margin-left: -10px;
+  grid-row: 2/3;
+  grid-column: 1/4;
+  font-weight: bold;
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem); /*Переменная*/
+  line-height: 83%;
+  letter-spacing: 0;
+  color: var(--main-title-color);
+  text-shadow: 4px 4px 0px var(--title-shadow-color);
+}
+
+.header__text-paragraph {
+  grid-row: 3/4;
+  grid-column: 1/4;
+  max-width: 491px;
+  min-height: 71px;  
+  color: var(--paragraph-text-color);
+  font-weight: bold;
+  line-height: 23.4px;
+  letter-spacing: 0;
+  justify-self: end;
+}
+
+.title-decor {
+  background-color: var(--accent-color);
+}
+
+.main {
+  margin: 0 var(--gap-length);
+}
+
+.horizontal-section {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 1fr 2fr;
+  position: relative;
+  margin-bottom: var(--section-mb);
+}
+
+.section__main-title {
+  font-weight: bold;
+  line-height: 23.4px;
+  color: var(--accent-color);
+}
+
+.card_title {
+  margin-bottom: 10px;
+}
+
+.card__text {
+  color: var(--supporting-color);
+  font-weight: normal;
+  line-height: 23.4px;
+}
+
+.card-list-item:not(:last-of-type) {
+  margin-bottom: 20px;
+}
+
+.card-link {
+  font-weight: bold;
+  line-height: 23.4px;
+  text-shadow: 1px 1px 0px var(--accent-color);
+  text-decoration: none;
+}
+
+.card-link:hover {
+  text-decoration: underline;
+}
+
+.card-link:focus {
+  outline: 1px solid var(--supporting-color);
+}
+
+.vertical-section {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-bottom: var(--section-mb);
+}
+
+.what__title {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.what__card-list {
+  grid-column: 1/-1;
+  grid-row: 2;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.normal-font {
+  font-weight: normal;
+}
+
+.gallery {
+  margin-bottom: var(--header-gallery-mb);
+}
+
+.gallery-content {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-flow: dense;
+  gap: var(--gap-length);
+}
+
+.gallery-content img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.gallery-content img:nth-child(1) {
+  grid-column: 1/3;
+}
+
+.gallery-content img:nth-child(2) {
+  grid-column: 3/4;
+  grid-row: 1/3;
+}
+
+.gallery-content img:nth-child(3) {
+  grid-column: 1/2;
+  grid-row: 2/4;
+}
+
+.gallery-content img:nth-child(5) {
+  grid-column: 2/4;
+  grid-row: 3/4;
+}
+
+.footer {
+  position: relative;
+  height: 100vh;
+  min-height: 768px;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  justify-items: center;
+}
+
+.footer-title {
+  grid-row: 2/3;
+  grid-column: 1/4;
+  font-weight: bold;
+  font-size: var(--main-title-size);
+  line-height: 83%;
+  letter-spacing: 0;
+  color: var(--main-title-color);
+  text-shadow: 4px 4px 0px var(--accent-color);
+}
+
+@media (width <= 375px) {
+  :root {
+    --header-gallery-mb: 40px;
+    --gap-length: 10px;
+    --section-mb: 50px;
+    --main-title-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  }
+}
+
+@media (width <= 768px) {
+  .header {
+    min-height: 1024px;
+  }
+
+  .header__theme-menu {
+    justify-self: end;
+    align-self: center;
+    grid-column: 3/4;    
+  }
+
+  .header__theme-menu-list {
+    flex-direction: column;
+  }
+
+  .what__card-list {
+    grid-template-columns: 1fr;
+}
+}
+
+@media (width <= 375px) {
+  .header {
+    margin-left: var( --gap-length);
+    min-height: 668px;
+  }
+
+  .header__title {
+    margin-left: 0;
+  }
+
+  .horizontal-section {
+    grid-template-columns: 1fr;
+  }
+
+  .what__title {
+    grid-column: 1/-1;
+  }
+
+  .gallery-content {
+    grid-template-columns: 1fr;
+  }
+
+  .gallery .gallery-content img {
+    grid-column: 1/-1;
+    grid-row: auto;
+  } 
 }
