--- a/styles/light.css
+++ b/styles/light.css
@@ -1,10 +1,10 @@
 :root.theme-light {
   --bg-image: url("../images/cover-image-light.png");
-  --bg-color: #FFF1F7;
-  --accent-color: #FF8DCB;
+  --bg-color: #fff1f7;
+  --accent-color: #ff8dcb;
   --supporting-color: #353430;
-  --main-title-color:  #FFC2E6;
-  --title-shadow-color: #FF8DCB;
+  --main-title-color: #ffc2e6;
+  --title-shadow-color: #ff8dcb;
   --camera-frame-color: #353430;
   --paragraph-text-color: #353430;
   --hovered-button-border: rgba(50, 49, 45, 0.4);
@@ -15,18 +15,18 @@
 
 @media (prefers-color-scheme: light) {
   :root {
-   --bg-image: url("../images/cover-image-light.png");
-  --bg-color: #FFF1F7;
-  --accent-color: #FF8DCB;
-  --supporting-color: #353430;
-  --main-title-color:  #FFC2E6;
-  --title-shadow-color: #FF8DCB;
-  --camera-frame-color: #353430;
-  --paragraph-text-color: #353430;
-  --hovered-button-border: rgba(50, 49, 45, 0.4);
-  --section-title-color: #353430;
-  --header-menu-color: #353430;
-  --card-title-color: #353430;
+    --bg-image: url("../images/cover-image-light.png");
+    --bg-color: #fff1f7;
+    --accent-color: #ff8dcb;
+    --supporting-color: #353430;
+    --main-title-color: #ffc2e6;
+    --title-shadow-color: #ff8dcb;
+    --camera-frame-color: #353430;
+    --paragraph-text-color: #353430;
+    --hovered-button-border: rgba(50, 49, 45, 0.4);
+    --section-title-color: #353430;
+    --header-menu-color: #353430;
+    --card-title-color: #353430;
   }
 
   .header__rec-indicator {
